@@ -1,0 +1,20 @@
+#!/usr/bin/env python
+# -*- encoding: utf-8 -*-
+
+class PropsetError(Exception):
+    pass
+
+class ReportError(Exception):
+    pass
+
+class MkcolError(Exception):
+    pass
+
+class PutError(Exception):
+    pass
+
+class DeleteError(Exception):
+    pass
+
+class NotFoundError(Exception):
+    pass
